# Wavemesh

./: .gitmodules  CMakeLists.txt  Readme  Readme.md  test.sh
.github/workflows/: ci.yml
CMake/: InstallLibrary.cmake
Common/: CMakeLists.txt  ExamplevtkSurface.cxx  RandomTriangulation.cxx  RenderWindow.cxx  RenderWindow.h  viewer.cxx  viewer2.cxx  vtkCurvatureMeasure.cxx  vtkCurvatureMeasure.h  vtkDelaunay.cxx  vtkDelaunay.h  vtkDualMeshDisplay.cxx  vtkDualMeshDisplay.h  vtkNeighbourhoodComputation.cxx  vtkNeighbourhoodComputation.h  vtkOFFReader.cxx  vtkOFFReader.h  vtkOFFWriter.cxx  vtkQuadricTools.cxx  vtkQuadricTools.h  vtkRandomTriangulation.cxx  vtkRandomTriangulation.h  vtkSMFReader.cxx  vtkSMFReader.h  vtkSMFWriter.h  vtkSurface.cxx  vtkSurface.h  vtkSurfaceBase.cxx  vtkSurfaceBase.h  vtkSurfaceIterators.h  vtkTag.h  vtkVolumeProperties.cxx
Compression/: CMakeLists.txt  DisplayWavelet.cxx  SWA_TWA.cxx  vtkArithmeticCoder.cxx  vtkArithmeticCoder.h  vtkMultiresolutionIO.cxx  vtkMultiresolutionIO.h  vtkMultiresolutionIOSeqII.cxx  vtkMultiresolutionIOSeqII.h  vtkSparseMatrix.cxx  vtkSparseMatrix.h  vtkWaveletSubdivisionFilter.cxx  vtkWaveletSubdivisionFilter.h  wavemesh.cxx
RangeCoding/: CMakeLists.txt  QuasiStaticModel.cxx  QuasiStaticModel.h  RangeDecoder.cxx  RangeDecoder.h  RangeDecoder2.h  RangeEncoder.cxx  RangeEncoder.h  port.h  vtkArithmeticCoderBase.cxx  vtkArithmeticCoderBase.h
VectorCompression/: CMakeLists.txt  decodeCoeffs.cxx  encodeCoeffs.cxx  io.h
doc/: CMakeLists.txt  DoxyMainPage.txt  doxygen.config.in
